--- a/sample.env
+++ b/sample.env
@@ -15,3 +15,6 @@ POSTGRES_PORT
 
 # PostgreSQL project Database name to connect on
 POSTGRES_DATABASE_NAME
+
+# To put the model controller into mimic mode and not use PostgreSQL to store data
+MIMIC
