--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "geoip-country": "^4.1.32",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
